--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "@wildpeaks/actions-worker",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "ActionsWorker class",
   "main": "src/ActionsWorker.js",
   "files": [
-    "src/ActionsWorker.js"
+    "src/ActionsWorker.js",
+    "test/ActionsWorker.tests.js"
   ],
+  "scripts": {
+    "test": "mocha"
+  },
   "repository": "https://github.com/wildpeaks/package-actions-worker",
   "keywords": [
     "wildpeaks",
@@ -18,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/wildpeaks/package-actions-worker/issues"
   },
-  "homepage": "https://github.com/wildpeaks/package-actions-worker#readme"
+  "homepage": "https://github.com/wildpeaks/package-actions-worker#readme",
+  "devDependencies": {
+    "mocha": "^3.2.0",
+    "sinon": "^1.17.6"
+  },
+  "dependencies": {
+    "deep-strict-equal": "^0.2.0"
+  }
 }
