--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,10 @@ language: node_js
 node_js:
   - 'stable'
   - 'lts/*'
-sudo: false
+sudo: required
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3
+addons:
+  chrome: stable
