Removed the Wallaby config for now

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,6 @@
 {
 	"recommendations": [
 		"EditorConfig.editorconfig",
-		"dbaeumer.vscode-eslint",
-		"WallabyJs.wallaby-vscode",
+		"dbaeumer.vscode-eslint"
 	]
 }
