--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
 		".gitattributes": true,
 		".npmrc": true,
 		"node_modules": true,
-		"package-lock.json": true
+		"package-lock.json": true,
+		"out": true
 	},
 	"search.exclude": {
 		"*.lnk": true,
@@ -23,6 +24,7 @@
 		".gitattributes": true,
 		".npmrc": true,
 		"node_modules": true,
-		"package-lock.json": true
+		"package-lock.json": true,
+		"out": true
 	}
 }
