--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@wildpeaks/store",
-  "version": "3.0.0-alpha3",
-  "description": "Tiny Typescript class to store an immutable State edited by JSON message and emitting JSON props",
+  "version": "3.0.0-alpha4",
+  "description": "Tiny Typescript class to store an immutable State, edited by JSON messages, and emitting JSON props",
   "author": "Cecile Muller",
   "license": "MIT",
   "eslintConfig": {
