--- a/.gitattributes
+++ b/.gitattributes
@@ -7,5 +7,6 @@ LICENSE         text
 *.md            text
 *.js            text
 *.ts            text
+*.tsx           text
 *.json          text
 *.yml           text
