--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wildpeaks/store",
-  "version": "3.0.0-alpha4",
+  "version": "3.0.0",
   "description": "Tiny Typescript class to store an immutable State, edited by JSON messages, and emitting JSON props",
   "author": "Cecile Muller",
   "license": "MIT",
@@ -32,7 +32,7 @@
   "homepage": "https://github.com/wildpeaks/package-store#readme",
   "devDependencies": {
     "@types/jasmine": "2.8.7",
-    "@types/node": "10.0.9",
+    "@types/node": "10.1.0",
     "@wildpeaks/eslint-config-typescript": "4.8.0",
     "@wildpeaks/webpack-config-web": "1.0.0",
     "eslint": "4.19.1",
