--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "src"
   ],
   "scripts": {
-    "test": "jasmine --helper=jasmine.typescript.js test/*.spec.ts"
+    "test": "jasmine --helper=register.typescript.js test/*.spec.ts"
   },
   "repository": "https://github.com/wildpeaks/package-store",
   "keywords": [
@@ -31,7 +31,7 @@
   },
   "homepage": "https://github.com/wildpeaks/package-store#readme",
   "devDependencies": {
-    "@types/jasmine": "3.4.6",
+    "@types/jasmine": "3.5.0",
     "@types/node": "12.12.14",
     "@wildpeaks/eslint-config-typescript": "7.2.0",
     "@wildpeaks/webpack-config-web": "4.9.0",
