--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/jasmine": "3.5.0",
     "@types/node": "12.12.14",
     "@wildpeaks/eslint-config-typescript": "7.2.0",
+    "@wildpeaks/tsconfig-web": "1.0.0",
     "@wildpeaks/webpack-config-web": "4.9.0",
     "eslint": "6.7.1",
     "express": "4.17.1",
