--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,3 @@
 {
-	"compilerOptions": {
-		"moduleResolution": "node",
-		"newLine": "LF",
-		"alwaysStrict": true,
-		"noEmitOnError": true,
-		"noImplicitAny": true,
-		"noImplicitReturns": true,
-		"noImplicitThis": true,
-		"noUnusedLocals": true,
-		"noUnusedParameters": true,
-		"strictNullChecks": true,
-		"preserveConstEnums": true,
-		"removeComments": true,
-		"sourceMap": true,
-		"module": "esnext",
-		"target": "es5",
-		"lib": ["es2017", "dom"],
-		"allowJs": true,
-		"jsx": "react",
-		"jsxFactory": "h"
-	}
+	"extends": "@wildpeaks/tsconfig-web"
 }
