ci: Move commitMessages back to package.json

--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
       }
     }
   },
+  "greenkeeper": {
+    "commitMessages": {
+      "dependencyUpdate": "fix: Update ${dependency}",
+      "devDependencyUpdate": "chore: Update ${dependency}"
+    }
+  },
   "main": "src/Store.ts",
   "types": "src/Store.ts",
   "files": [
