fix: downgrade TS back to 3.7.2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,3 @@
 {
-	"extends": "@wildpeaks/tsconfig-web",
-	"compilerOptions": {
-		"useDefineForClassFields": false
-	}
+	"extends": "@wildpeaks/tsconfig-web"
 }
