--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@types/jasmine": "3.5.0",
     "@types/node": "12.12.18",
-    "@wildpeaks/eslint-config-typescript": "7.3.0",
+    "@wildpeaks/eslint-config-typescript": "8.0.0-alpha6",
     "@wildpeaks/tsconfig-web": "1.1.0",
     "@wildpeaks/webpack-config-web": "4.12.0",
     "eslint": "6.7.2",
