--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@types/jasmine": "3.5.0",
     "@types/node": "12.12.18",
     "@wildpeaks/eslint-config-typescript": "8.0.0-alpha6",
-    "@wildpeaks/tsconfig-web": "1.1.0",
+    "@wildpeaks/tsconfig-web": "2.0.0-alpha1",
     "@wildpeaks/webpack-config-web": "4.12.0",
     "eslint": "6.7.2",
     "express": "4.17.1",
