--- a/.editorconfig
+++ b/.editorconfig
@@ -7,10 +7,9 @@ end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
 
-[package.json]
+[*.yml]
 indent_style = space
-indent_size = 2
 
-[greenkeeper.json]
+[package.json]
 indent_style = space
 indent_size = 2
