test: start conversion to from Jasmine to Mocha

--- a/package.json
+++ b/package.json
@@ -35,27 +35,30 @@
     "src"
   ],
   "scripts": {
-    "test": "jasmine --helper=register.typescript.js test/*.test.ts"
+    "test": "mocha -r ts-node/register/transpile-only test/*.test.ts"
   },
   "peerDependencies": {
     "typescript": "*"
   },
   "devDependencies": {
-    "@types/jasmine": "3.5.10",
+    "@types/mocha": "7.0.2",
     "@wildpeaks/eslint-config-typescript": "10.3.0",
     "@wildpeaks/tsconfig-web": "2.7.0",
     "@wildpeaks/webpack-config-web": "4.24.0",
     "eslint": "7.2.0",
     "express": "4.17.1",
-    "jasmine": "3.5.0",
+    "mocha": "7.2.0",
     "preact": "10.4.4",
     "prettier": "2.0.5",
-    "puppeteer": "3.3.0",
     "recursive-readdir": "2.2.2",
     "rimraf": "3.0.2",
+    "sinon": "9.0.2",
     "ts-loader": "7.0.5",
     "ts-node": "8.10.2",
     "typescript": "3.9.5",
     "webpack": "4.43.0"
+  },
+  "dependencies": {
+    "@types/sinon": "^9.0.4"
   }
 }
