--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
   },
   "devDependencies": {
     "@types/mocha": "7.0.2",
+    "@types/sinon": "9.0.4",
     "@wildpeaks/eslint-config-typescript": "10.3.0",
     "@wildpeaks/tsconfig-web": "2.7.0",
     "@wildpeaks/webpack-config-web": "4.24.0",
     "eslint": "7.2.0",
     "express": "4.17.1",
     "mocha": "7.2.0",
+    "playwright": "1.1.0",
     "preact": "10.4.4",
     "prettier": "2.0.5",
     "recursive-readdir": "2.2.2",
@@ -57,8 +59,5 @@
     "ts-node": "8.10.2",
     "typescript": "3.9.5",
     "webpack": "4.43.0"
-  },
-  "dependencies": {
-    "@types/sinon": "^9.0.4"
   }
 }
