--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,8 +2,8 @@
 	"recommendations": [
 		"EditorConfig.editorconfig",
 		"dbaeumer.vscode-eslint",
-		"esbenp.prettier-vscode"
-		// "hbenl.vscode-test-explorer",
-		// "hbenl.vscode-mocha-test-adapter"
+		"esbenp.prettier-vscode",
+		"hbenl.vscode-test-explorer",
+		"hbenl.vscode-mocha-test-adapter"
 	]
 }
