--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-	// "mochaExplorer.require": "ts-node/register/transpile-only",
-	// "mochaExplorer.files": "test/**/*.test.ts",
+	"mochaExplorer.require": "ts-node/register/transpile-only",
+	"mochaExplorer.files": "test/**/*.test.ts",
 	"eslint.validate": [
 		"typescript"
 	],
