--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Download sources
         uses: actions/checkout@v1
 
+      - name: Install Webkit dependency
+        run: apt-get install -y libegl1
+
       - name: Use Node LTS
         uses: actions/setup-node@v1
         with:
