--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install Webkit dependency
-        run: apt-get install -y libegl1
+        run: sudo apt-get install -y libegl1
 
       - name: Use Node LTS
         uses: actions/setup-node@v1
