--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,17 +11,10 @@ jobs:
     timeout-minutes: 10
     runs-on: ubuntu-latest
     steps:
-      - name: Download sources
-        uses: actions/checkout@v1
-
-      - name: Use Node LTS
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
         with:
           node-version: 12.x
-
-      - name: Install dependencies
-        run: npm install
-
+      - run: npm install
       - uses: microsoft/playwright-github-action@v1
-      - name: Run the tests
-        run: npm run test
+      - run: npm run test
