--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,10 @@
-name: Tests
+name: Test
 on:
   push:
     branches:
-    - "**"
+    - master
+    - features/**
+    - dependabot/**
   pull_request:
     branches:
     - master
@@ -10,14 +12,14 @@ jobs:
   tests:
     strategy:
       matrix:
-        node: [12.x, 14.x]
+        node: [14.x, 15.x]
     timeout-minutes: 10
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/setup-node@v1
+    - uses: actions/checkout@v2.3.4
+    - uses: actions/setup-node@v2.1.4
       with:
         node-version: ${{ matrix.node }}
-    - run: npm install
+    - run: npm install --prefer-offline --no-fund --no-progress
     - uses: microsoft/playwright-github-action@v1
     - run: npm run test
