--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@types/mocha": "8.2.0",
+    "@types/node": "14.14.21",
     "@types/sinon": "9.0.10",
     "@wildpeaks/eslint-config-typescript": "10.7.0",
     "@wildpeaks/tsconfig-web": "2.11.1",
