--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "@types/node": "14.14.21",
     "@types/sinon": "9.0.10",
     "@wildpeaks/eslint-config-typescript": "10.7.0",
-    "@wildpeaks/tsconfig-web": "2.11.1",
+    "@wildpeaks/tsconfig": "4.0.0-rc2",
     "@wildpeaks/webpack-config-web": "5.16.0",
     "eslint": "7.17.0",
     "express": "4.17.1",
