--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,9 @@
 			"module": "CommonJS"
 		}
 	},
-	"extends": "@wildpeaks/tsconfig"
+	"extends": "@wildpeaks/tsconfig",
+	"compilerOptions": {
+		"jsx": "react-jsx",
+		"jsxImportSource": "preact"
+	},
 }
