--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,15 +1,12 @@
 {
 	"mochaExplorer.require": "ts-node/register/transpile-only",
 	"mochaExplorer.files": "test/**/*.test.ts",
-	"eslint.validate": [
-		"typescript"
-	],
+	"eslint.validate": ["typescript"],
 	"files.exclude": {
 		"*.lnk": true,
 		"*.url": true,
 		"LICENSE": true,
 		".editorconfig": true,
-		".npmrc": true,
 		"node_modules": true,
 		"package-lock.json": true,
 		"out": true
